--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!---шрифты-->
+    <!--Подключены через СSS-->
     <!--<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'> <!--PT Sans-->
     <!--<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'> <!--cuprum-->
     <!--css-->
@@ -16,7 +17,6 @@
       <div  class="status-panel-container">
         <div class="wrapper">
           <h1 class="logo">
-            <!-- inl-block - таких классов не создаем. На практике такие случаи бывают, но в большинстве случаем это относится к float элементам. Удаляем его, а стили задаем самим блокам через конкретный класс -->
             <a href="index.html">ТЕХНОМАРТ</a>
           </h1>
           <div class="iu-search">
@@ -81,7 +81,6 @@
           <nav>
             <ul class="nav-top-menu">
               <li><span>Главная</span></li>
-              <!-- в активном пукте меню заменяем a на span на всех страницах. Так как пункт меню не должен быть ссылкой на самого себя -->
               <li><a href="#">Компания</a></li>
               <li><a href="catalog.html">Каталог</a></li>
               <li><a href="#">Новости</a></li>
@@ -341,8 +340,7 @@
           <h2>Компания "Техномарт"</h2>
           <p class ="services-content">
             Настоящий мужской шопинг начинается здесь! 
-            Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-             <!-- текст почему то курсивом - в макете обычное начертание -->
+            Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.            
           </p>  
           <p class ="services-content">
             Мы можем доставить Ваш товар в самые отдаленные точки России!<br>
@@ -350,9 +348,8 @@
           </p class ="services-content">
           <ul>
             <li>Деловые линии</li>
-            <li>Автотрединг</li>
+            <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
-
           </ul>
           <a class="ac-but company-but" href="#">Подробнее о компании</a>
         </div>
@@ -420,8 +417,8 @@
       </div>  
     </footer>
     <!--popup window-->
-    <!--Большая карта-->
     <!--class невидимого блока not-visible-->
+    <!--Большая карта-->
     <div class="map-big not-visible">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124007!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1462792306362" width="940" height="446" frameborder="0" style="border:0" allowfullscreen></iframe>
       <button class="btn-close btn-map" type="button" name="map-big-close">Закрыть</button>
@@ -448,7 +445,7 @@
       </div>      
       <button class="btn-close btn-feedback" type="button" name="map-big-close">Закрыть</button>
     </form>
-    
-    <script src="js/script.js"></script>
+    <!--Подключение скрипта-->    
+    <script src="js/script.js"></script> 
   </body>
 </html>
