--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
             <i class="icon-search"></i>
             <form class="search-form" action="#" method="post">
               <label for="in-search">Поиск:</label>    
-              <input type="text" id="in-search" name="in-search">   
+              <input type="text" class="input-search not-visible" id="in-search" name="in-search">   
             </form>  
           </div>
           <div class="iu-marker">
@@ -80,25 +80,25 @@
           </div>         
           <nav>
             <ul class="nav-top-menu">
-              <li><a href="index.html">Главная</a></li>
-              <li><a href="#">Компания</a></li>
-              <li><span>Каталог</span></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="#">Спецпредложения</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>            
+              <li class="nav-tm-item"><a href="index.html">Главная</a></li>
+              <li class="nav-tm-item"><a href="#">Компания</a></li>
+              <li class="nav-tm-item"><span>Каталог</span></li>
+              <li class="nav-tm-item"><a href="#">Новости</a></li>
+              <li class="nav-tm-item"><a href="#">Спецпредложения</a></li>
+              <li class="nav-tm-item"><a href="#">Доставка</a></li>
+              <li class="nav-tm-item"><a href="#">Контакты</a></li>            
             </ul>
-          </nav> 
+          </nav>           
         </div> 
       </div>  
     </header>
     <div class="wrapper">
       <div class="breadcrumbs">
         <ul>
-          <li><a href="index.html"><i class="icon-home"></i></a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li>Перфораторы</li> 
+          <li class="breadcrumbs-item"><a href="index.html"><i class="icon-home"></i></a></li>
+          <li class="breadcrumbs-item"><a href="#">Каталог</a></li>
+          <li class="breadcrumbs-item"><a href="#">Инструмент</a></li>
+          <li class="breadcrumbs-item">Перфораторы</li> 
         </ul>    
       </div>
     </div>
@@ -160,9 +160,9 @@
             <div class="goods-page-sort">
               <h2>Cортировка:</h2>
               <ul class="gps-select-menu">
-                <li><a href="#">по цене</a></li>
-                <li><a href="#">по типу</a></li>
-                <li><a href="#">по функционалу</a></li>
+                <li class="gps-select-menu-item"><a href="#">по цене</a></li>
+                <li class="gps-select-menu-item"><a href="#">по типу</a></li>
+                <li class="gps-select-menu-item"><a href="#">по функционалу</a></li>
               </ul>  
               <a href="#"><i class="icon-up-dir"></i></a><!--вверх-->
               <a href="#"><i class="icon-down-dir"></i></a> <!--вниз-->
@@ -289,10 +289,10 @@
             </div>
             <div class="goods-paginator">
               <ul>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">Следующая</a></li>
+                <li class="paginator-item"><a href="#">1</a></li>
+                <li class="paginator-item"><a href="#">2</a></li>
+                <li class="paginator-item"><a href="#">3</a></li>
+                <li class="paginator-item"><a href="#">Следующая</a></li>
               </ul>
             </div>
           </div>
@@ -319,12 +319,12 @@
               <a href="index.html">ТЕХНОМАРТ</a>
             </h1>
             <ul class="nav-footer-one-menu">
-              <li><a href="#">Компания</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><span>Каталог</span></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul>            
+              <li class="om-item"><a href="#">Компания</a></li>
+              <li class="om-item"><a href="#">Новости</a></li>
+              <li class="om-item"><span>Каталог</span></li>
+              <li class="om-item"><a href="#">Доставка</a></li>
+              <li class="om-item"><a href="#">Контакты</a></li>
+            </ul>                  
           </div>
           <div class="footer-top-two">
             <div class="footer-top-two-address">
@@ -333,10 +333,10 @@
             </div>
             
               <ul class="nav-footer-two-menu">
-                <li><a href="#">Материалы</a></li>
-                <li><a href="#">Техника</a></li>
-                <li><a href="#">Инструмент</a></li>
-                <li><a href="#">Спецпредложения</a></li>              
+                <li class="tm-item"><a href="#">Материалы</a></li>
+                <li class="tm-item"><a href="#">Техника</a></li>
+                <li class="tm-item"><a href="#">Инструмент</a></li>
+                <li class="tm-item"><a href="#">Спецпредложения</a></li>              
               </ul>
             
           </div>
@@ -349,9 +349,9 @@
             Все права защищены
           </div>
           <div class="fb-social">
-            <div><a href="#"><i class="icon-vk"></i></a></div>
-            <div><a href="#"><i class="icon-facebook"></i></a></div>
-            <div><a href="#"><i class="icon-instagramm"></i></a></div>
+            <div class="fb-social-item"><a href="#"><i class="icon-vk"></i></a></div>
+            <div class="fb-social-item"><a href="#"><i class="icon-facebook"></i></a></div>
+            <div class="fb-social-item"><a href="#"><i class="icon-instagramm"></i></a></div>           
           </div>
           <div class="fb-feedback">
             <span>Обратная связь</span><br>
