--- a/index.html
+++ b/index.html
@@ -458,7 +458,10 @@
       </div>
       <button class="btn-close btn-add-cart-close" type="button" name="map-big-close">Закрыть</button>
     </div>
-    <!--Подключение скрипта-->    
+    
+     <!--Подключение скрипта-->    
     <script src="js/script.js"></script> 
+    <script src="js/feedback.js"></script> 
+    
   </body>
 </html>
