Итоговая проверка 1 - замечания 1

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <!--<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'> cuprum-->
     <!--css-->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css"> 
+    <link rel="stylesheet" href="css/style.css"> 
 
     <!--Подключение скрипта-->    
     <script src="js/script.js"></script>     
@@ -292,7 +292,7 @@
             </div>
             <div class="goods-paginator">
               <ul>
-                <li class="paginator-item"><a href="#">1</a></li>
+                <li class="paginator-item"><a href="#" class="active-item-btn">1</a></li>
                 <li class="paginator-item"><a href="#">2</a></li>
                 <li class="paginator-item"><a href="#">3</a></li>
                 <li class="paginator-item"><a href="#">Следующая</a></li>
@@ -331,25 +331,26 @@
           </div>
           <div class="footer-top-two">
             <div class="footer-top-two-address">
-              г. Санкт-Петербург, ул. Б.Конюшенная, д.19/8 <br>
-              +7 (812) 555-05-55 
+              <p class="footer-adress">г. Санкт-Петербург, ул. Б.Конюшенная, д.19/8</p> 
+              <p class="footer-adress">+7 (812) 555-05-55</p>
             </div>
             
-              <ul class="nav-footer-two-menu">
-                <li class="tm-item"><a href="#">Материалы</a></li>
-                <li class="tm-item"><a href="#">Техника</a></li>
-                <li class="tm-item"><a href="#">Инструмент</a></li>
-                <li class="tm-item"><a href="#">Спецпредложения</a></li>              
-              </ul>
+            <ul class="nav-footer-two-menu">
+              <li class="tm-item"><a href="#">Материалы</a></li>
+              <li class="tm-item"><a href="#">Техника</a></li>
+              <li class="tm-item"><a href="#">Инструмент</a></li>
+              <li class="tm-item"><a href="#">Спецпредложения</a></li>              
+            </ul>
             
-          </div>
+          </div>      
         </div>
       </div>
-      <div class="footer-bottom">
+       <div class="footer-bottom">
          <div class="wrapper"> 
           <div class="fb-copyright">
-            &#169; 2010-2016 Компания "Техномарт"<br>
-            Все права защищены
+            <p>&#169; 2010-2016 Компания "Техномарт"
+              Все права защищены
+            </p>
           </div>
           <div class="fb-social">
             <div class="fb-social-item"><a href="#"><i class="icon-vk"></i></a></div>
@@ -357,11 +358,11 @@
             <div class="fb-social-item"><a href="#"><i class="icon-instagramm"></i></a></div>           
           </div>
           <div class="fb-feedback">
-            <span>Обратная связь</span><br>
+            <p>Обратная связь</p>
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </div>
           <div class="fb-design">
-            <span>Разработано - </span><br>
+            <p>Разработано - </p>
             <a href="//htmlacademy.ru/">htmlacademy.ru</a>
           </div>
         </div>
